--- a/Halloapp/nl.lproj/Localizable.strings
+++ b/Halloapp/nl.lproj/Localizable.strings
@@ -520,6 +520,9 @@
 /* Text shown when user is about to remove the chat */
 "chats.list.remove.message" = "Als je deze chat verwijderd, verwijder je de chatgeschiedenis en inhoud ervan van je apparaat.";
 
+/* Prompts the user to choose a photo. */
+"choose.photo" = "Foto kiezen";
+
 /* Title for the button in comment deletion confirmation prompt. */
 "comment.delete.action" = "Reactie Verwijderen";
 
@@ -895,6 +898,9 @@
 /* Explains that as more contacts join the app, they will appear in this list automatically. */
 "fellow.contacts.will.arrive" = "Je telefooncontacten die zich registreren op HalloApp verschijnen hier automatisch.";
 
+/* Disclaimer telling users that their posts can be seen by their friends. */
+"friends.privacy.disclaimer" = "Mensen die je hebt toegevoegd kunnen je posts zien die je met al je HalloApp-vrienden deelt.";
+
 /* Placeholder text shown in group description input box when there's no description */
 "group.add.description" = "Groepsomschrijving toevoegen";
 
@@ -1213,6 +1219,9 @@
 /* Link that when tapped will open App Store so user can update to the latest version of the app. */
 "link.update.your.app" = "App bijwerken.";
 
+/* Shown to the user when suggestions are being loaded. */
+"loading.suggestions" = "Suggesties worden geladen";
+
 /* Title to indicate that a fetch operation is in progress. */
 "locating.title" = "Locatie wordt opgehaald";
 
@@ -1413,7 +1422,8 @@
 /* Explains that the listed contacts will be able to see posts that are shared with all contacts */
 "n.contacts.privacy.disclaimer" = "n.contacts.privacy.disclaimer";
 
-/* Number of contacts that are already on HalloApp. */
+/* Number of contacts that are already on HalloApp.
+   Number of contacts that are already registered on HalloApp. */
 "n.fellow.contacts" = "n.fellow.contacts";
 
 /* Indicates how many invites are remaining */
@@ -1433,6 +1443,9 @@
 
 /* Header that appears above unread messages in the chats view. */
 "n.unread.messages.title" = "n.unread.messages.title";
+
+/* Indicates the user's name. */
+"name.title" = "Naam";
 
 /* Placeholder text shown in the middle of the Add New Group Members screen when user have no contacts (in ZeroZone) to add */
 "new.group.members.empty.placeholder" = "Je contacten die HalloApp gebruiken verschijnen hier";
@@ -1584,7 +1597,7 @@
 /* Menu option to open a location in (Apple) Maps. */
 "openInMapsApp.maps" = "Openen in Kaarten";
 
-/* Title that suggests something is optional. */
+/* Title denoting something that is optional. */
 "optional.title" = "Optioneel";
 
 /* button to launch photo and video library */
@@ -1806,9 +1819,6 @@
 /* Popup that appears when user tries to register uninvited number */
 "registration.invite.only" = "Als je een uitnodigingslink hebt gevolgd om je te registreren voor deze groep, klik dan opnieuw op de link om de registratie af te ronden en deel te nemen aan de groep.";
 
-/* Text prompting the user for their push name. */
-"registration.name.prompt" = "Hoe moeten we je noemen?";
-
 /* Placeholder text for name entry */
 "registration.nameEntry.placeholder" = "Jouw Naam";
 
@@ -1908,8 +1918,14 @@
 /* Title that indicates that someone took a screenshot. */
 "screenshot.title" = "Screenshot";
 
+/* Title of a button that displays all results. */
+"see.all" = "Toon Alles";
+
 /* Message that pops up when user attempts to save an empty contact list */
 "select.at.least.one.contact" = "Selecteer ten minste één contact.";
+
+/* Prompts the user to choose their username. */
+"select.username.prompt" = "Voer je naam in en kies een gebruikersnaam";
 
 /* Indicates that an item is in the process of being sent. */
 "sending.title" = "Wordt verzonden";
@@ -2249,6 +2265,9 @@
 
 /* Button to start voice call. Should be translated as verb. */
 "user.voice.call" = "Bellen";
+
+/* Indicates the user's username. */
+"username.title" = "Gebruikersnaam";
 
 /* No comment provided by engineer. */
 "VIDEO" = "VIDEO";
