--- a/Halloapp/pt-br.lproj/Localizable.stringsdict
+++ b/Halloapp/pt-br.lproj/Localizable.stringsdict
@@ -351,15 +351,15 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>few</key>
-			<string>You’re connected to %d people on HalloApp</string>
+			<string>%d people from your contacts are on HalloApp. Add them as friends?</string>
 			<key>many</key>
-			<string>You’re connected to %d people on HalloApp</string>
+			<string>%d people from your contacts are on HalloApp. Add them as friends?</string>
 			<key>one</key>
 			<string>Você está conectado a %d pessoa no HalloApp</string>
 			<key>other</key>
 			<string>Você está conectado a %d pessoas no HalloApp</string>
 			<key>two</key>
-			<string>You’re connected to %d people on HalloApp</string>
+			<string>%d people from your contacts are on HalloApp. Add them as friends?</string>
 			<key>zero</key>
 			<string>Você ainda não está conectado a ninguém no HalloApp</string>
 		</dict>
