--- a/Halloapp/pt-br.lproj/Localizable.strings
+++ b/Halloapp/pt-br.lproj/Localizable.strings
@@ -898,6 +898,9 @@
 /* Explains that as more contacts join the app, they will appear in this list automatically. */
 "fellow.contacts.will.arrive" = "Seus contatos telefônicos que se registrarem no HalloApp aparecerão aqui automaticamente.";
 
+/* Disclaimer telling users that their posts can be seen by their friends. */
+"friends.privacy.disclaimer" = "As pessoas que você adicionou poderão ver suas postagens compartilhadas com todos os amigos do HalloApp.";
+
 /* Placeholder text shown in group description input box when there's no description */
 "group.add.description" = "Adicionar descrição do grupo";
 
@@ -1215,6 +1218,9 @@
 
 /* Link that when tapped will open App Store so user can update to the latest version of the app. */
 "link.update.your.app" = "Atualize seu aplicativo.";
+
+/* Shown to the user when suggestions are being loaded. */
+"loading.suggestions" = "Carregando sugestões";
 
 /* Title to indicate that a fetch operation is in progress. */
 "locating.title" = "Localização";
@@ -1597,6 +1603,12 @@
 /* button to launch photo and video library */
 "photo.and.video.library" = "Biblioteca de Fotos e Vídeos";
 
+/* fallback title for suggested photo album */
+"photoSuggestions.album.title" = "Sugerido";
+
+/* title for photo suggestions section */
+"photosuggestionsheader.title" = "Sugestões de novas postagens";
+
 /* Message in media picker when access is denied. */
 "picker.access.denied.message" = "Por favor, conceda acesso em \"Configurações\"";
 
@@ -1917,6 +1929,9 @@
 
 /* Message that pops up when user attempts to save an empty contact list */
 "select.at.least.one.contact" = "Por favor selecione pelo menos um contato.";
+
+/* Prompts the user to choose their username. */
+"select.username.prompt" = "Digite seu nome e escolha um nome de usuário";
 
 /* Indicates that an item is in the process of being sent. */
 "sending.title" = "Enviando";
@@ -2262,6 +2277,15 @@
 
 /* Text that indicates a view action. */
 "view.title" = "Visualizar";
+
+/* Body of notification that a user has a new sharing suggestion. '6 photos' */
+"visitTracker.notification.body.nolocation" = "%ld fotos";
+
+/* Body of notification that a user has a new sharing suggestion. '6 photos from Terun' */
+"visitTracker.notification.body.withlocation" = "%1$ld fotos de %2$@";
+
+/* Title of notification that a user has a new sharing suggestion */
+"visitTracker.notification.title" = "Nova sugestão de compartilhamento";
 
 /* Moment deletion confirmation. Displays as action sheet title. */
 "your.moment.delete.confirmation" = "Excluir este momento? Essa ação não pode ser desfeita.";
